# the-frame

./: .gitignore  .pre-commit-config.yaml  config.toml  demo.py  frame.service  image_converter.py  pyproject.toml  quotes.toml  test.py
src/the_frame/: __main__.py  image_converter.py  playlist.py  quote_renderer.py
src/the_frame/waveshare_epd/: config.py  screen.py
tests/: test_image_converter.py  test_playlist.py  test_screen.py
waveshare_epd/: epdconfig.py  screen.py
