[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "the-frame"
version = "0.1.0"
description = "E-ink photo frame for Waveshare Spectra 6 E6 display"
requires-python = ">=3.11"
dependencies = [
    "pillow>=10.0.0",
    "spidev; sys_platform == 'linux'",
    "gpiozero; sys_platform == 'linux'",
    "lgpio; sys_platform == 'linux'",
]

[project.scripts]
frame = "the_frame.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/the_frame"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pre-commit>=4.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
